fix footer covering content

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,23 @@
 }
 /* Variables */
 :root{
-    --BgColour: #E6E8EF;
+    --BgColour: #f5ecec;
     --AccentYellow: #F4C949;
     --DarkBluePrimary: #090f1a;
     --DarkBgColor: #0d131d;
 }
 #navbarPlaceholder{
     position: sticky;
+    width:100%;
     top:0;
     z-index: 1;
 }
-
 body{
     min-height: 100vh;
     width:100%;
     display: flex;
     flex-direction: column;
-    
+    padding-bottom: 11vh;
 }
 #footerPlaceholder{
     position:fixed;
@@ -38,9 +38,7 @@ body{
 #Navbar {
     background-color: var(--DarkBluePrimary);
     font-weight: 900;
-    position: sticky;
-    top: 0;
-    min-width: 100%;
+    width: 100%;
     padding: 2vh 1vw 1vh 1vw;
 }
 
@@ -100,13 +98,12 @@ body{
 
 /* Navbar After Login */
 #profile{
-    width:4rem;
-    height:4rem;
+    width:3rem;
+    height:3rem;
     border-radius: 100%;
     object-fit: cover;
     border: var(--BgColour) 0.1em solid;
 }
-
 
 #profile:hover{
     filter:brightness(70%);
@@ -439,6 +436,7 @@ body{
     background-color: var(--DarkBluePrimary);
     padding: 1vh 2vw 0;
     width:100%;
+    height:10vh;
 }
 #footerfeatures {
     display: flex;
@@ -453,9 +451,9 @@ body{
     justify-content: center;
     align-items: center;
     height:auto;
-    width:20em;  
+    width:20vw;
     text-decoration: none;
-    filter: invert(50%) brightness(160%);
+    filter: invert(50%) brightness(185%);
 }
 #footer-maps:hover,
 #footer-home:hover,
@@ -472,7 +470,6 @@ body{
 #home, #map {
     background-color: var(--BgColour);
     text-decoration: none;
-    margin: 0px;
 }
 
 .titlebox {
@@ -496,8 +493,7 @@ body{
     border-radius: 1em;
     width: 80%;
     justify-content: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: 0 10%;
 }
 
 .dropdown-content a {
@@ -556,7 +552,8 @@ body{
     display: flex;
     justify-content: center;
     text-align: center;
-    
+    gap:2vw;
+    margin:3vh 11vw;
 }
 
 .favoritesbox {
@@ -564,24 +561,23 @@ body{
     background-color: var(--DarkBgColor);
     color: #090f1a;
     width: 60%;
-    height: 15vh;
+    height: 24vh;
     justify-content: center;
     border-radius: 2em;
-    padding-bottom: 2%;
-    padding-top: 2%;
+    padding: 2% 0;
     text-align: center;
     min-width: 64%;
     margin:2vh 18vw;
+    overflow: hidden;
+    
 }
-
 .eventboxhome {
     display: flex;
     background-color:var(--DarkBgColor) ;
     color: var(--BgColour);
-    width: 30%;
+    width: 50%;
     height: 50%;
     justify-content: center;
-    margin: 2em 2em;
     border-radius: 2em;
     padding: 2vh;
 }
@@ -657,12 +653,16 @@ body{
 
 
 @media screen and (max-width: 767px) {
+    body{
+        padding-bottom: 9vh;
+    }
     #footerText{
         display:none;
     }
 
     #footer{
         padding-bottom: 1vh;
+        height:8vh;
     }
 
     #mapLanding, #eventLanding, #Welcome_msg{
